Adicionando " - " no Certificado

--- a/curriculo.html
+++ b/curriculo.html
@@ -44,10 +44,10 @@
                 <!--AGUARDANDO CONCLUIR ESTA FORMACÃO-->
 
                 <li>HTML e CSS: ambientes de desenvolvimento, estrutura de arquivos e tags - Alura <a href="https://cursos.alura.com.br/certificate/28dbc622-9303-46dd-bb7d-5b66fde2e258?lang=pt_BR">com certificado</a></li>
-                <li>HTML e CSS: cabeçalho, footer e variáveis CSS - Alura <a href="https://cursos.alura.com.br/certificate/15d46ba7-1d5a-4a04-84aa-3a3faff65645?lang=pt_BR">com certificado</a></li>
-                <li>HTML e CSS: Classes, posicionamento e Flexbox - Alura  <a href="https://cursos.alura.com.br/certificate/1281038a-b46b-47bc-99ac-9398b7a640b4?lang=pt_BR">com certificado</a></li>
-                <li>HTML e CSS: praticando HTML/CSS - Alura <a href="https://cursos.alura.com.br/certificate/fc94a2a1-8267-413e-afd6-708bd6ce7998?lang=pt_BR">com certificado</a></li>
-                <li>HTML e CSS: trabalhando com responsividade e publicação de projetos - Alura <a href="https://cursos.alura.com.br/certificate/696bb1ae-4891-48fb-bb99-c58ec2a64981?lang=pt_BR">com certificado</a></li>
+                <li>HTML e CSS: cabeçalho, footer e variáveis CSS - Alura - <a href="https://cursos.alura.com.br/certificate/15d46ba7-1d5a-4a04-84aa-3a3faff65645?lang=pt_BR">com certificado</a></li>
+                <li>HTML e CSS: Classes, posicionamento e Flexbox - Alura - <a href="https://cursos.alura.com.br/certificate/1281038a-b46b-47bc-99ac-9398b7a640b4?lang=pt_BR">com certificado</a></li>
+                <li>HTML e CSS: praticando HTML/CSS - Alura - <a href="https://cursos.alura.com.br/certificate/fc94a2a1-8267-413e-afd6-708bd6ce7998?lang=pt_BR">com certificado</a></li>
+                <li>HTML e CSS: trabalhando com responsividade e publicação de projetos - Alura - <a href="https://cursos.alura.com.br/certificate/696bb1ae-4891-48fb-bb99-c58ec2a64981?lang=pt_BR">com certificado</a></li>
             </ul>
             </div>    
         </section>
