Adicionada nova imagem

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         
         <p class="apresentacao__conteudo__texto">Adoro também livros de romance psicológico, romance filosófico e de suspenses. Além de música e livros, gosto de filmes clássicos, daqueles que marcaram gerações e são icônicos. </p>
        </section>
-       <img class="apresentacao__imagem" src="./img/ah03.jpg" alt=" retrato de Murillo Almeida com fone de ouvido">
+       <img class="apresentacao__imagem" src="./img/foto currículo 02.png" alt=" retrato de Murillo Almeida com fone de ouvido">
     </main>
 
     <footer class= "rodape">
