--- a/curriculo.html
+++ b/curriculo.html
@@ -51,7 +51,7 @@
             </ul>
             </div>    
         </section>
-        <img class="apresentacao__imagem" src="./img/ah03.jpg" alt=" retrato de Murillo Almeida com fone de ouvido">
+        <img class="apresentacao__imagem" src="./img/foto currículo 02.png" alt=" retrato de Murillo Almeida com fone de ouvido">
     </main> 
     <footer class= "rodape">
         <p>Desenvolvido por Murillo Almeida</p>
